# PhysicsWithCode

./: .gitignore  404.html  PLAN.md  docker-compose.yml  index.html  index.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: deploy.yml
backend/: pyproject.toml  requirements.txt
backend/app/: db.py
backend/app/models/: __init__.py
data/: datasets.json  domains.json  models.json  papers.json  results.json  tasks.json
datasets/: index.html  index.txt
datasets/md17/: index.html  index.txt
datasets/pdebench-navier-stokes/: index.html  index.txt
datasets/quark-gluon-dataset/: index.html  index.txt
datasets/top-tag-reference/: index.html  index.txt
datasets/weatherbench2-era5/: index.html  index.txt
papers/: index.html  index.txt
papers/1810.05165/: index.html  index.txt
papers/1902.08570/: index.html  index.txt
papers/2010.08895/: index.html  index.txt
papers/2101.03164/: index.html  index.txt
papers/2201.08187/: index.html  index.txt
papers/2202.03772/: index.html  index.txt
papers/2202.11214/: index.html  index.txt
papers/2206.08916/: index.html  index.txt
papers/2211.00454/: index.html  index.txt
papers/2212.12794/: index.html  index.txt
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Badge.tsx  Navbar.tsx  PerformanceChart.tsx
src/lib/: data.ts  utils.ts
tasks/: index.html  index.txt
tasks/md17-molecular-dynamics/: index.html  index.txt
tasks/navier-stokes-2d-turbulence/: index.html  index.txt
tasks/quark-gluon-discrimination/: index.html  index.txt
(+22 files in other folders)
